  sections, will use the value from the MTT section.

- Added "log_file" field in [MTT] section

- Added "funclet_files" field into [MTT] section, allowing a
  comma-delimited list of .pm files to add more funclets to MTT.

- Allow timeouts to be specified in [HH:[MM:]]SS format in the ini file.

- before_any, before_each, after_any, and after_each steps can be set to
  funclets

- Added "INI_NAME" as a predefined INI parameter (a la Perl's $PROGRAM_NAME)

- Added "PROGRAM_NAME" as a predefined INI parameter (a la Perl's
  $PROGRAM_NAME)

- Added several performance stdout analyzers:
  - NBC Bench
  - OSU benchmarks
  - SKaMPI
  - IMB
  - NetPIPE

- Added include_section. include_section takes a CSV of INI section names and
  interpolates those sections into the current INI section, allowing the user
  to factor down an INI file. Note: --section filtering is performed *after*
  the interpolation, so there is no need to supply "include" sections to the 
  --section option. (See samples/ompi-core-template.ini for examples)

- New options:
  - --no-force
  - --no-reporter

- New MPI install INI params used to do *stuff* before and/or after an MPI
  Install (e.g., create a tarball, install on cluster):
  - before_install
  - before_install_timeout
  - after_install
  - after_install_timeout

- GNU Install before/after step parameters
  - before_configure
  - after_configure
  - before_make_all
  - after_make_all
  - before_make_check
  - after_make_check
  - before_make_install
  - after_make_install

- include_file(s) INI parameter - just like pre-processor "#include"
  directives

- trivial_tests_languages - comma separated list of languages to use
  for trivial tests (default: "c,c++,f77,f90").

- added parameter to Simple specify module: do_not_run.  If set to 1
  for a specific subsection (and the subsection is exclusive), then
  those tests will not be run.  Handy for explicitly specifying tests
  that exist but should *not* be run.